update to android-gradle plugin 1.1.3 and build tools 22.0.1

--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -3,13 +3,13 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
-        classpath 'org.robolectric:robolectric-gradle-plugin:0.14.1'
+        classpath 'com.android.tools.build:gradle:1.1.3'
+        classpath 'org.robolectric:robolectric-gradle-plugin:1.1.0'
     }
 }
 
 apply plugin: 'com.android.library'
-apply plugin: 'robolectric'
+apply plugin: 'org.robolectric'
 apply plugin: 'jacoco'
 apply plugin: 'maven'
 apply plugin: 'signing'
@@ -22,7 +22,7 @@ android {
     publishNonDefault true
 
     compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         versionCode 1
@@ -116,7 +116,7 @@ uploadArchives {
 // Testing and code coverage
 //
 
-robolectric {
+android.testOptions.unitTests.all {
     include '**/*Test.class'
     exclude '**/ApplicationTest.class'
 }
