update support lib to 22

--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -39,8 +39,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.0.+'
-    compile 'com.android.support:support-v4:21.0.+'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:support-v4:22.2.0'
     compile 'org.wordpress:analytics:1.0.0'
     compile 'org.wordpress:utils:1.6.0'
 
