Updated support library and build tools

--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -21,14 +21,14 @@ repositories {
 android {
     publishNonDefault true
 
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 22
+    buildToolsVersion '22.0.1'
 
     defaultConfig {
         versionCode 1
         versionName "1.0"
         minSdkVersion 14
-        targetSdkVersion 21
+        targetSdkVersion 22
     }
     buildTypes {
         release {
@@ -39,16 +39,14 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.0.+'
-    compile 'com.android.support:support-v4:21.0.+'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:support-v4:22.2.0'
     compile 'org.wordpress:analytics:1.0.0'
     compile 'org.wordpress:utils:1.6.0'
-
     // Test libraries
     testCompile 'junit:junit:4.10'
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.robolectric:robolectric:2.4'
-
     // Workaround for IDE bug
     // http://stackoverflow.com/questions/22246183/android-studio-doesnt-recognize-espresso-classes
     provided 'junit:junit:4.10'
