--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -48,8 +48,8 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
-    compile 'org.wordpress:analytics:1.0.0'
-    compile 'org.wordpress:utils:1.6.0'
+    compile 'org.wordpress:analytics:+'
+    compile 'org.wordpress:utils:+'
 
     // Test libraries
     testCompile 'junit:junit:4.11'
