--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -48,6 +48,7 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:design:23.1.1'
     compile 'org.wordpress:utils:1.9.0'
 
     // Test libraries
