--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -43,6 +43,7 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/aztec_release.kotlin_module'
     }
 }
 
@@ -53,9 +54,9 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.5'
     compile 'org.wordpress:utils:1.18.1'
 
-    compile 'com.github.wordpress-mobile.AztecEditor-Android:aztec:v1.0-beta.12'
-    compile 'com.github.wordpress-mobile.AztecEditor-Android:wordpress-comments:v1.0-beta.12'
-    compile 'com.github.wordpress-mobile.AztecEditor-Android:wordpress-shortcodes:v1.0-beta.12'
+    compile ('com.github.wordpress-mobile.WordPress-Aztec-Android:aztec:0c5152d1894f36d4ea3559658730f82d2bc18ec5')
+    compile ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-shortcodes:0c5152d1894f36d4ea3559658730f82d2bc18ec5')
+    compile ('com.github.wordpress-mobile.AztecEditor-Android:wordpress-comments:0c5152d1894f36d4ea3559658730f82d2bc18ec5')
 
     // Required Aztec dependencies (they should be included but Jitpack seems to be stripping these out)
     compile "org.jetbrains.kotlin:kotlin-stdlib:1.1.4"
