--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -53,9 +53,9 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.5'
     compile 'org.wordpress:utils:1.18.1'
 
-    compile ('com.github.wordpress-mobile.WordPress-Aztec-Android:aztec:v1.0')
-    compile ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-shortcodes:v1.0')
-    compile ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-comments:v1.0')
+    compile ('com.github.wordpress-mobile.WordPress-Aztec-Android:aztec:861f7a9d3e38eaf6281e49bc510cf11e92f37288')
+    compile ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-shortcodes:861f7a9d3e38eaf6281e49bc510cf11e92f37288')
+    compile ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-comments:861f7a9d3e38eaf6281e49bc510cf11e92f37288')
 
     // Required Aztec dependencies (they should be included but Jitpack seems to be stripping these out)
     compile "org.jetbrains.kotlin:kotlin-stdlib:1.1.4"
