Fixed Gson library version to latest patch in 2.6 version (2.6.2) as 2.6.+ syntax was not working

--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.1.4"
     implementation "org.jsoup:jsoup:1.10.3"
 
-    implementation 'com.google.code.gson:gson:2.6.+'
+    implementation 'com.google.code.gson:gson:2.6.2'
 
     lintChecks 'org.wordpress:lint:1.0.0'
 }
