--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -53,9 +53,9 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.5'
     implementation 'org.wordpress:utils:1.18.1'
 
-    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:aztec:v1.3.3')
-    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-shortcodes:v1.3.3')
-    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-comments:v1.3.3')
+    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:aztec:97d7bfbb59f672c1fc0341499bc385298dc732d1')
+    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-shortcodes:97d7bfbb59f672c1fc0341499bc385298dc732d1')
+    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-comments:97d7bfbb59f672c1fc0341499bc385298dc732d1')
 
     // Required Aztec dependencies (they should be included but Jitpack seems to be stripping these out)
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.1.4"
