--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -52,9 +52,9 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.5'
     implementation 'org.wordpress:utils:1.18.1'
 
-    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:aztec:v1.3.6')
-    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-shortcodes:v1.3.6')
-    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-comments:v1.3.6')
+    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:aztec:555df8b2ee5be6a4eef2ab1b001afb1b81ca2911')
+    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-shortcodes:555df8b2ee5be6a4eef2ab1b001afb1b81ca2911')
+    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-comments:555df8b2ee5be6a4eef2ab1b001afb1b81ca2911')
 
     // Required Aztec dependencies (they should be included but Jitpack seems to be stripping these out)
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.1.4"
