--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -52,9 +52,9 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.5'
     implementation 'org.wordpress:utils:1.22'
 
-    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:aztec:fix~paste-hash-calculation-SNAPSHOT')
-    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-shortcodes:fix~paste-hash-calculation-SNAPSHOT')
-    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-comments:fix~paste-hash-calculation-SNAPSHOT')
+    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:aztec:fbfe28cbfc7f7c63545215977a4db803b59eb362')
+    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-shortcodes:fbfe28cbfc7f7c63545215977a4db803b59eb362')
+    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-comments:fbfe28cbfc7f7c63545215977a4db803b59eb362')
 
     // Required Aztec dependencies (they should be included but Jitpack seems to be stripping these out)
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.1.4"
