--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -31,7 +31,7 @@ android {
     defaultConfig {
         versionCode 13
         versionName "1.3"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 26
         ndk {
             abiFilters 'armeabi-v7a', 'x86'
@@ -61,9 +61,9 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.5'
     implementation 'org.wordpress:utils:1.22'
 
-    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:aztec:v1.3.9')
-    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-shortcodes:v1.3.9')
-    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-comments:v1.3.9')
+    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:aztec:d3c0c815d6b67e0fdb1a105c47f7122297cbe178')
+    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-shortcodes:d3c0c815d6b67e0fdb1a105c47f7122297cbe178')
+    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-comments:d3c0c815d6b67e0fdb1a105c47f7122297cbe178')
 
     implementation project(':react-native-svg')
     implementation project(':react-native-aztec')
