--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -93,10 +93,10 @@ dependencies {
 
     def requestedTask = getGradle().getStartParameter().getTaskRequests().toString()
     if (requestedTask.contains("Vanilla") || requestedTask.contains("Gutenberg")) {
-        implementation project(':react-native-svg')
-        implementation project(':react-native-aztec')
-        implementation project(':react-native-recyclerview-list')
-        implementation project(':react-native-gutenberg-bridge')
+        implementation ('com.github.wordpress-mobile:react-native-svg:5452e615e63e76df557637f5225aa4afbb3e553f')
+        implementation ('com.github.wordpress-mobile:react-native-aztec:67cbd7188d0b2014739aadf39035e3a92bf5b029')
+        implementation ('com.github.wordpress-mobile:react-native-recyclerview-list:4bd48846b581f3d33282521dc03b1e275c973c73')
+        implementation ('com.github.wordpress-mobile:gutenberg-mobile:c1d07724333ad8a97dc5e1bc4aed99f60a6d5d63')
 
         // React Native
         implementation "com.facebook.react:react-native:+" // From node_modules.
