--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -36,26 +36,7 @@ android {
         ndk {
             abiFilters 'armeabi-v7a', 'x86'
         }
-    }
-
-    flavorDimensions "buildType"
-
-    productFlavors {
-        wasabi {
-            dimension "buildType"
-        }
-
-        vanilla {
-            dimension "buildType"
-        }
-
-        gutenberg {
-            dimension "buildType"
-        }
-
-        zalpha {
-            dimension "buildType"
-        }
+        buildConfigField "boolean", "BUILD_GUTENBERG_FROM_SOURCE", rootProject.ext.buildGutenbergFromSource.toString()
     }
 
     buildTypes {
@@ -63,11 +44,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
-
-    sourceSets {
-        vanilla.java.srcDir 'src/gutenberg/java'
-        vanilla.res.srcDir 'src/gutenberg/res'
     }
 
     // Avoid 'duplicate files during packaging of APK' errors
@@ -91,16 +67,20 @@ dependencies {
     api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-shortcodes:fbf294b88d17996aff9e3d62a293d2638818dd0a')
     api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-comments:fbf294b88d17996aff9e3d62a293d2638818dd0a')
 
-    def requestedTask = getGradle().getStartParameter().getTaskRequests().toString()
-    if (requestedTask.contains("Vanilla") || requestedTask.contains("Gutenberg")) {
+    if (rootProject.ext.buildGutenbergFromSource) {
+        implementation project(':react-native-svg')
+        implementation project(':react-native-aztec')
+        implementation project(':react-native-recyclerview-list')
+        implementation project(':react-native-gutenberg-bridge')
+    } else {
         implementation ('com.github.wordpress-mobile:react-native-svg:faed05be8dca2b0df8957c5f72c40eccef12144d')
         implementation ('com.github.wordpress-mobile:react-native-aztec:67cbd7188d0b2014739aadf39035e3a92bf5b029')
         implementation ('com.github.wordpress-mobile:react-native-recyclerview-list:a2e8ca550412504c32218fd473c55f696f18f1f7')
         implementation ('com.github.wordpress-mobile:gutenberg-mobile:328e4bc596d481a77fe12e8645698d37b4de38c5')
-
-        // React Native
-        implementation "com.facebook.react:react-native:+" // From node_modules.
     }
+
+    // React Native
+    implementation "com.facebook.react:react-native:+" // From node_modules or directly from npmjs.com
 
     // Required Aztec dependencies (they should be included but Jitpack seems to be stripping these out)
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.1.4"
