--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.5'
     implementation 'org.wordpress:utils:1.22'
 
-    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:aztec:40b050538bc74a3a02e1fc65954601c93ae01394')
+    api ('com.github.wordpress-mobile.WordPress-Aztec-Android:aztec:v1.3.14')
     api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-shortcodes:v1.3.13')
     api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-comments:v1.3.13')
 
