--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -64,9 +64,15 @@ dependencies {
     api ('com.github.wordpress-mobile.WordPress-Aztec-Android:wordpress-comments:v1.3.14')
 
     if (rootProject.ext.buildGutenbergFromSource) {
-        implementation project(':react-native-gutenberg-bridge')
+        implementation (project(':react-native-gutenberg-bridge')) {
+            exclude group: 'com.squareup.okhttp3'
+        }
     } else {
-        implementation (waitJitpack('com.github.wordpress-mobile', 'gutenberg-mobile', submoduleGitHash('../../../', 'libs/gutenberg-mobile')))
+        implementation (waitJitpack('com.github.wordpress-mobile', 'gutenberg-mobile', submoduleGitHash('../../../', 'libs/gutenberg-mobile'))) {
+            // Inheriting RN's okhttp version can interfere with FluxC SSL handling
+            // See https://github.com/wordpress-mobile/WordPress-Android/issues/9032 and https://github.com/wordpress-mobile/WordPress-FluxC-Android/issues/919
+            exclude group: 'com.squareup.okhttp3'
+        }
     }
 
     // Required Aztec dependencies (they should be included but Jitpack seems to be stripping these out)
