--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 
     ext {
-        aztecVersion = 'v1.3.18'
+        aztecVersion = '2ec8bc426013df73d9294da623c2ec4854e4ac2a'
     }
 
     repositories {
