--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 
     ext {
-        aztecVersion = 'd2f24f4a7c21e2be77ef77cd646e67a3a2b9802a'
+        aztecVersion = 'v1.3.19'
     }
 
     repositories {
