--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 
     ext {
-        aztecVersion = 'e02ec1387c739d73645e498a2e5ed1b3916b2587'
+        aztecVersion = 'v1.3.20'
     }
 
     repositories {
