Point to the release Aztec tag

--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 
     ext {
-        aztecVersion = 'ee83fa8f21b2f60d0b3ca147ecb9e4747898e60a'
+        aztecVersion = 'v1.3.21'
     }
 
     repositories {
