--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 
     ext {
-        aztecVersion = 'v1.3.24'
+        aztecVersion = '3a6ab4ffde163ec2f2ebd3732a20013ebd8723a4'
     }
 
     repositories {
