--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 
     ext {
-        aztecVersion = 'v1.3.26'
+        aztecVersion = 'gb-stray-selection-fix-try1'
     }
 
     repositories {
