--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 
     ext {
-        aztecVersion = 'v1.3.29'
+        aztecVersion = '7386e3a755904eff833900855e74e559ed7d0e61'
     }
 
     repositories {
