--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -8,8 +8,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        tools:replace="android:appComponentFactory" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainExampleActivity"
             android:label="@string/title_activity_example">
