Update Aztec version to the tagged v1.3.34

--- a/WordPressEditor/build.gradle
+++ b/WordPressEditor/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     ext {
-        aztecVersion = '876ac04b4b55304cb81dab7b5025822e4ddec2f8'
+        aztecVersion = 'v1.3.34'
     }
 
     dependencies {
